--- a/Use this to play the sample data.ipynb
+++ b/Use this to play the sample data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,15 @@
     "import time\n",
     "import glob\n",
     "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pybullet as p"
    ]
   },
   {
@@ -40,8 +49,8 @@
      "output_type": "stream",
      "text": [
       "c:\\users\\sholt\\desktop\\pandarl\\pandaRL\\envs\n",
-      "[1. 1. 1.] (-0.06747973492546953, 0.2953461152924287, -0.00031147979594436936)\n",
-      "[1. 1. 1.] (0.08158628803167678, 0.20493204824701614, -0.00017300959445822135)\n"
+      "[1. 1. 1.] (-0.1689612856683653, 0.11219097462269115, 0.05073467814557409)\n",
+      "[1. 1. 1.] (-0.03635108962956127, 0.17774388755042161, 0.08815138945575733)\n"
      ]
     }
    ],
@@ -53,23 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Play some representative sample data\n",
     "\n",
     "\n",
-    "# base_path = 'data_collection/sample_data/0'\n",
-    "f= 11\n",
-    "base_path = 'data_collection/collected_data/play_demos/'\n",
+    "\n",
+    "f= 0\n",
+    "#base_path = 'data_collection/collected_data/play_demos/'\n",
+    "base_path = 'data_collection/sample_data/'\n",
     "data = np.load(base_path+'obs_act_etc/'+str(f)+'/data.npz')\n",
-    "potential_start_points = glob.glob(base_path+'/env_states/'+str(f)+'/env_states/*.bullet')\n"
+    "potential_start_points = glob.glob(base_path+'/states_and_ims/'+str(f)+'/env_states/*.bullet')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4788\n"
+      "1121\n"
      ]
     }
    ],
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 805 is out of bounds for axis 0 with size 805",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-4f39bb332953>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m400\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mtargetPoses\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjoint_targets\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mindexes\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     env.p.setJointMotorControlArray(env.panda.panda,indexes, env.p.POSITION_CONTROL,\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 805 is out of bounds for axis 0 with size 805"
+     ]
+    }
+   ],
    "source": [
     "path, start = get_random_start_point(potential_start_points)\n",
     "env.p.restoreState(fileName=path)\n",
