--- a/Use this to play the sample data.ipynb
+++ b/Use this to play the sample data.ipynb
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "import time\n",
     "import glob\n",
+    "import config\n",
     "#"
    ]
   },
@@ -33,14 +34,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_dir=c:\\users\\sholt\\desktop\\pandarl\\pandaRL\\envs\n"
+      "current_dir=/home/sholto/Desktop/AI/pandaRL/pandaRL/envs\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sholt\\Anaconda3\\lib\\site-packages\\gym\\logger.py:30: UserWarning: \u001b[33mWARN: gym.spaces.Box autodetected dtype as <class 'numpy.float32'>. Please provide explicit dtype.\u001b[0m\n",
+      "/home/sholto/anaconda3/lib/python3.7/site-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
       "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
      ]
     },
@@ -48,9 +49,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\users\\sholt\\desktop\\pandarl\\pandaRL\\envs\n",
-      "[1. 1. 1.] (-0.1689612856683653, 0.11219097462269115, 0.05073467814557409)\n",
-      "[1. 1. 1.] (-0.03635108962956127, 0.17774388755042161, 0.08815138945575733)\n"
+      "/home/sholto/Desktop/AI/pandaRL/pandaRL/envs\n",
+      "[1. 1. 1.] (0.08175836962495495, 0.23956438000461935, -0.00016739629521161952)\n",
+      "[1. 1. 1.] (0.12376052263515575, 0.1841043473520847, 0.0018597801453481778)\n"
      ]
     }
    ],
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,17 +109,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_random_start_point(potential_start_points):\n",
     "    idx = np.random.choice(len(potential_start_points))\n",
     "    path = potential_start_points[idx]\n",
-    "    tstep = int(path.split('\\\\')[-1].replace('.bullet',''))\n",
+    "    if config.OS == 'windows':\n",
+    "        tstep = int(path.split('\\\\')[-1].replace('.bullet',''))\n",
+    "    else:\n",
+    "        tstep = int(path.split(\"/\")[-1].replace('.bullet',''))\n",
     "    return path, tstep\n",
     "    \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "240.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/env.timeStep"
    ]
   },
   {
@@ -130,15 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5.3314995765686035\n"
+     ]
+    }
+   ],
    "source": [
     "path, start = get_random_start_point(potential_start_points)\n",
     "env.p.restoreState(fileName=path)\n",
-    "\n",
+    ",\n",
     "for i in range(start, start+80):\n",
-    "    env.step(actions[i,:])"
+    "    env.step(actions[i,:])\n"
    ]
   },
   {
@@ -150,21 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 805 is out of bounds for axis 0 with size 805",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-4f39bb332953>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m400\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mtargetPoses\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjoint_targets\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mindexes\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     env.p.setJointMotorControlArray(env.panda.panda,indexes, env.p.POSITION_CONTROL,\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 805 is out of bounds for axis 0 with size 805"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path, start = get_random_start_point(potential_start_points)\n",
     "env.p.restoreState(fileName=path)\n",
@@ -1929,7 +1949,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
