Updated colab workspace setup

--- a/main_pybullet_tpu.ipynb
+++ b/main_pybullet_tpu.ipynb
@@ -47,6 +47,102 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zMJ___6ARZ4u",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        },
+        "cellView": "form",
+        "outputId": "14a921e4-529c-4ff6-bcc0-438e8b730f9f"
+      },
+      "source": [
+        "#@title Workpace Setup (Local vs Colab)\n",
+        "from google.colab import drive\n",
+        "from os.path import join\n",
+        "import os\n",
+        "\n",
+        "COLAB = True #@param {type:\"boolean\"}\n",
+        "DEVICE = \"TPU\" #@param [\"TPU\", \"GPU\"]\n",
+        "\n",
+        "if COLAB:\n",
+        "    ROOT = '/content/drive'     # default for the drive\n",
+        "    PROJ = 'My Drive/Robotic Learning'       # path to your project on Drive\n",
+        "    PROJECT_PATH = os.path.join(ROOT, PROJ)\n",
+        "\n",
+        "    drive.mount(ROOT)           # we mount the drive at /content/drive\n",
+        "    PYBULLET_DATA_DIR = f'{PROJECT_PATH}/play_data'\n",
+        "\n",
+        "    # Sync drive to VM directory\n",
+        "    # !rsync -aP --exclude=data/ \"{PROJECT_PATH}/\"  '/content/learning_from_play'\n",
+        "    # %cd '/content/learning_from_play'\n",
+        "else:\n",
+        "    # Todo:\n",
+        "    pass"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vGlfbtndFDNf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "cellView": "form",
+        "outputId": "006fc5ec-b9ad-4a24-d1a1-847e8a717653"
+      },
+      "source": [
+        "#@title Git clone repo (optional)\n",
+        "from getpass import getpass\n",
+        "import urllib\n",
+        "\n",
+        "if COLAB:\n",
+        "    USERNAME = \"tfrizza\" #@param {type:\"string\"}\n",
+        "    PASSWORD = getpass('Password: ')\n",
+        "    PASSWORD = urllib.parse.quote(PASSWORD) # your password is converted into url format\n",
+        "\n",
+        "    GIT_REPOSITORY = \"sholtodouglas/learning_from_play\"\n",
+        "\n",
+        "    GIT_CMD = f'git clone https://{USERNAME}:{PASSWORD}@github.com/{GIT_REPOSITORY}.git /content/learning_from_play'\n",
+        "    exit_status = os.system(GIT_CMD)\n",
+        "    if exit_status==32768: \n",
+        "        print(\"Incorrect git credentials, try again\")\n",
+        "    del PASSWORD, GIT_CMD\n",
+        "    %cd '/content/learning_from_play'\n",
+        "else:\n",
+        "    print(\"Ignoring for local workspace\")"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Password: ··········\n",
+            "/content/learning_from_play\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "EliqxOpPv9Dy",
@@ -59,71 +155,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bx4B1eJguzem",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "031c3121-baa4-4fca-ebfb-a898ff5a6df6"
-      },
-      "source": [
-        "import os\n",
-        "from getpass import getpass\n",
-        "import urllib\n",
-        "\n",
-        "user = input('User name: ')\n",
-        "password = getpass('Password: ')\n",
-        "password = urllib.parse.quote(password) # your password is converted into url format\n",
-        "\n",
-        "cmd_string = 'git clone https://{0}:{1}@github.com/sholtodouglas/learning_from_play.git'.format(user, password)\n",
-        "\n",
-        "exit_status = os.system(cmd_string)\n",
-        "if exit_status==32768: print(\"Incorrect git credentials, try again\")\n",
-        "cmd_string, password = \"\", \"\" # removing the password from the variable"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "User name: tfrizza\n",
-            "Password: ··········\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "9dfeg5VOv9D5",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 35
         },
-        "outputId": "958a4ea9-8574-47d4-ed6b-38998bc07732"
+        "outputId": "47f9e650-074a-46d9-a12c-dcfa37303678"
       },
       "source": [
-        "# If Colab\n",
-        "COLAB = True\n",
-        "\n",
-        "if COLAB:\n",
-        "    class config(object):\n",
-        "        pass\n",
-        "\n",
-        "    from google.colab import drive\n",
-        "    drive.mount('/content/drive/')\n",
-        "\n",
-        "    config = config()\n",
-        "    config.PYBULLET_PLAY = '/content/drive/My Drive/play_data/'\n",
-        "    config.DEVICE = 'TPU'\n",
-        "\n",
-        "    %cd /content/learning_from_play/\n",
-        "\n",
-        "\n",
-        "\n",
         "def load_data(path, keys):\n",
         "    cnt = Counter()\n",
         "    dataset = []\n",
@@ -145,12 +185,11 @@
         "        \n",
         "    return dataset,cnt"
       ],
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n",
             "/content/learning_from_play\n"
           ],
           "name": "stdout"
@@ -184,7 +223,7 @@
         "\n",
         "print(\"REPLICAS: \", strategy.num_replicas_in_sync)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +555,7 @@
         "from data import load_data\n",
         "# import config"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +572,7 @@
         "if config.DEVICE is 'GPU':\n",
         "    tf.config.experimental.set_memory_growth(physical_devices[0], enable=True)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -547,7 +586,7 @@
         "# \n",
         "RELATIVE_JOINTS = False # use relative joints instead of absolute angles"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -561,7 +600,7 @@
         "#dataset, cnt = data.create_single_dataset(dataset_path)\n",
         "dataset, cnt = load_data(dataset_path, keys)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -583,7 +622,7 @@
         "plt.bar(cnt.keys(), cnt.values(), width=1)\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -618,7 +657,7 @@
         "minutes = secs // 60 - hours * 60\n",
         "print(f\"We have {total_frames} frames of data, which is {hours:.0f}hrs {minutes:.0f}m.\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,7 +793,7 @@
         "        # ds = ds.cache()\n",
         "        return ds"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -788,7 +827,7 @@
         "tfb = tfp.bijectors\n",
         "tfpl = tfp.layers"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -835,7 +874,7 @@
         "\n",
         "model = create_lstm_model(layer_size=1024)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -852,7 +891,7 @@
       "source": [
         "tf.keras.utils.plot_model(model)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +922,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,7 +987,7 @@
         "# Whether to use LSTM models, as probabilistic models are better they will all be PROB true\n",
         "SEQ = True"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -987,7 +1026,7 @@
         "    optimizer.apply_gradients(zip(gradients, variables))\n",
         "    return loss  "
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,7 +1054,7 @@
         "train_data, valid_data = rsd.create_tf_ds_slices(is_training=True), rsd.create_tf_ds_slices(is_training=False)\n",
         "train_data, valid_data"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1069,7 +1108,7 @@
         "        #   callbacks=callbacks\n",
         "          )"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1171,7 +1210,7 @@
         "fig.add_scatter(y=val_loss, mode='lines', name='val')\n",
         "fig.show()"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
