fixed data issue

--- a/Use this to play the sample data.ipynb
+++ b/Use this to play the sample data.ipynb
@@ -286,10 +286,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow_probability as tfp\n",
+    "tfd = tfp.distributions\n",
+    "tfb = tfp.bijectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist = tfd.Logistic(loc=[0], scale=[-0.001])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=100, shape=(1,), dtype=float32, numpy=array([nan], dtype=float32)>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-dist.log_prob(0)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1949,7 +1982,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
