--- a/Use this to play the sample data.ipynb
+++ b/Use this to play the sample data.ipynb
@@ -23,7 +23,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pybullet as p\n",
+    "keys = ['obs', 'acts', 'achieved_goals', 'joint_poses', 'target_poses']\n",
+    "\n",
+    "def load_data(path, keys):\n",
+    "    dataset = {k:[] for k in keys+['sequence_index','sequence_id']}\n",
+    "    obs_act_path = os.path.join(path, 'obs_act_etc/')\n",
+    "\n",
+    "    for demo in os.listdir(obs_act_path):\n",
+    "        data_dict = {}\n",
+    "        \n",
+    "        \n",
+    "        traj = np.load(obs_act_path+demo+'/data.npz')\n",
+    "        \n",
+    "        rpy_acts = []\n",
+    "        rpy_obs = []\n",
+    "        for k in traj.keys():\n",
+    "            print(k)\n",
+    "        for a in list(traj['acts']):\n",
+    "            rpy_acts.append(np.concatenate([a[0:3], p.getEulerFromQuaternion(a[3:7]), np.expand_dims(a[-1],0)]))\n",
+    "            \n",
+    "        for o in list(traj['obs']):\n",
+    "            rpy_obs.append(np.concatenate([o[0:3], p.getEulerFromQuaternion(o[3:7]), np.expand_dims(o[-1],0)]))\n",
+    "        \n",
+    "        path = obs_act_path+demo+'/data.npz'\n",
+    "        print(path.replace(\".npz\", \"\"))\n",
+    "        np.savez(path.replace(\".npz\", \"\"), acts=traj['acts'], obs=traj['obs'],\n",
+    "                     achieved_goals =traj['achieved_goals'], controllable_achieved_goals =traj['controllable_achieved_goals'], joint_poses=traj['joint_poses'],\n",
+    "                     target_poses=traj['target_poses'], rpy_acts=np.array(rpy_acts), rpy_obs=np.array(rpy_obs))\n",
+    "    return dataset\n",
+    "\n",
+    "dataset = load_data(PYBULLET_DATA_DIR, keys)"
+   ]
   },
   {
    "cell_type": "code",
@@ -381,7 +413,7 @@
     "import time\n",
     "import glob\n",
     "import config\n",
-    "env = gym.make('pandaPlay1Obj-v0')\n",
+    "env = gym.make('pandaPlayAbsRPY1Obj-v0')\n",
     "env.render(mode='human')\n",
     "o = env.reset()"
    ]
@@ -451,15 +483,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path, start = get_random_start_point(potential_start_points)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -471,7 +494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path, start = get_random_start_point(potential_start_points)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,140 +512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_collection/collected_data/play_one_obj_demos//states_and_ims/2/env_states/1353.bullet\n",
-      "[ True  True  True False]\n",
-      "[False False  True  True]\n",
-      "[False  True  True False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[ True False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[ True False False False]\n",
-      "[False False False False]\n",
-      "[False False False  True]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n",
-      "[False False False False]\n"
+      "data_collection/collected_data/play_one_obj_demos//states_and_ims/2/env_states/1597.bullet\n"
      ]
     }
    ],
@@ -622,7 +528,9 @@
     "print(path)\n",
     "os = []\n",
     "for i in range(start, start+42):\n",
-    "    o, r, _, d = env.step(actions[i,:])\n",
+    "    a = actions[i,:]\n",
+    "    a = np.concatenate([a[0:3], env.p.getEulerFromQuaternion(a[3:7]), np.expand_dims(a[-1],0)])\n",
+    "    o, r, _, d = env.step(a)\n",
     "    os.append(o['observation'])"
    ]
   },
