--- a/LMP_Test.ipynb
+++ b/LMP_Test.ipynb
@@ -162,7 +162,7 @@
         "    # Todo:\n",
         "    pass"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
       "source": [
         "!git clone https://github.com/sholtodouglas/learning_from_play"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
       "source": [
         "%cd '/content/learning_from_play'"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +431,7 @@
         "    NUM_DEVICES = 1\n",
         "    print(physical_devices)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,7 +759,7 @@
         "\n",
         "import data"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -772,7 +772,7 @@
         "# import importlib\n",
         "# importlib.reload(data)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -786,7 +786,7 @@
         "JOINTS = False # use relative joints instead of absolute angles\n",
         "VELOCITY = True"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +812,7 @@
         "        dataset[k] = np.vstack(dataset[k])\n",
         "    return dataset"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,7 +845,7 @@
         "GOAL_DIM = dataset['achieved_goals'].shape[1]\n",
         "print(f'Obs: (N,{OBS_DIM}), Acts: (N,{ACT_DIM}), Goals: (N,{GOAL_DIM})')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +873,7 @@
         "minutes = secs // 60 - hours * 60\n",
         "print(f\"We have {DATASET_SIZE} frames of data, which is {hours:.0f}hrs {minutes:.0f}m.\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,7 +904,7 @@
         "    \n",
         "    dataset[k] = np.concatenate([augmented_data, dataset[k]], 0)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -924,7 +924,7 @@
         "minutes = secs // 60 - hours * 60\n",
         "print(f\"After augmentation we have {DATASET_SIZE} frames of data, which is {hours:.0f}hrs {minutes:.0f}m.\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1038,7 +1038,7 @@
         "valid_dataset = tf_ds_transform(full_dataset.skip(train_size))\n",
         "train_dataset"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1083,7 +1083,7 @@
         "tfb = tfp.bijectors\n",
         "tfpl = tfp.layers"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1202,7 +1202,7 @@
         "    )\n",
         "    return mixture_dist"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1240,7 +1240,7 @@
         "wandb.login()\n",
         "#%load_ext tensorboard\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1314,7 +1314,7 @@
         "# Explore regularising the encoder using info-VAE, while concurrently making the planner chase it\n",
         "# Add latent space projection plots"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1358,7 +1358,7 @@
         "    image = tf.expand_dims(image, 0)\n",
         "    return image"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1387,7 +1387,7 @@
         "  def result(self):\n",
         "    return self.max"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1564,7 +1564,7 @@
         "    per_replica_losses, ze, zp = strategy.run(test_step, args=(dataset_inputs, beta))\n",
         "    return strategy.reduce(tf.distribute.ReduceOp.MEAN, per_replica_losses, axis=None), ze.values[0], zp.values[0]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1576,7 +1576,7 @@
         "train_dist_dataset = iter(strategy.experimental_distribute_dataset(train_dataset))\n",
         "valid_dist_dataset = iter(strategy.experimental_distribute_dataset(valid_dataset))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1602,7 +1602,7 @@
         "                           duty_cycle=0.5\n",
         "                           )"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1673,7 +1673,7 @@
         "config.beta_min = beta_sched.beta_min\n",
         "config.beta_max = beta_sched.beta_max"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1712,7 +1712,7 @@
       "source": [
         "wandb.run.name =\"GCBC_vel_quat_aug_rel_GRU\""
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1733,7 +1733,7 @@
         "\n",
         "save_weights(model_path)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1907,7 +1907,7 @@
         "\n",
         "  plt.show()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1961,7 +1961,7 @@
         "  z = tf.tile(tf.expand_dims(plan.sample(), 1), (1, WINDOW_SIZE, 1))\n",
         "  pred_acts = actor([states, z, goals]) # TODO Check can you backprop through samples"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1998,7 +1998,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2062,15 +2062,20 @@
         "elif JOINTS and not RELATIVE:\n",
         "    env = gym.make('pandaPlayAbsJoints1Obj-v0')\n",
         "    #env = gym.make('pandaPlayJoints-v0')\n",
-        "elif not JOINTS and RELATIVE:\n",
+        "elif not JOINTS and RELATIVE and QUAT:\n",
         "    env = gym.make('pandaPlayRel1Obj-v0')\n",
+        "elif not JOINTS and RELATIVE and not QUAT:\n",
+        "    env = gym.make('pandaPlayRelRPY1Obj-v0')\n",
+        "elif not JOINTS and not RELATIVE and not QUAT:\n",
+        "    print('making an absolute one')\n",
+        "    env = gym.make('pandaPlayAbsRPY1Obj-v0')\n",
         "else:\n",
         "    env = gym.make('pandaPlay1Obj-v0')\n",
         "\n",
         "env.reset()\n",
         "env.render('playback')"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2104,7 +2109,7 @@
         "    actor = create_actor(**model_params, GCBC=GCBC)\n",
         "actor.load_weights(f'{model_path}/model.h5')"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2170,7 +2175,7 @@
         "                o = tf.expand_dims(tf.expand_dims(o['observation'], 0),0)\n",
         "    return np.array(a_true), np.array(a_pred)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2182,7 +2187,7 @@
         "# Lets plot pred actions vs true actions\n",
         "v_it = iter(valid_dataset.repeat())"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2198,7 +2203,7 @@
       "source": [
         "ls '$PYBULLET_DATA_DIR'/obs_act_etc"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2242,6 +2247,10 @@
         "    else:\n",
         "        actions = eval_data['acts']\n",
         "\n",
+        "if VELOCITY:\n",
+        "      observations = tf.concat([observations, eval_data['velocities']], axis = -1)\n",
+        "    \n",
+        "\n",
         "def get_random_start_point(potential_start_points):\n",
         "    idx = np.random.choice(len(potential_start_points))\n",
         "    path = potential_start_points[idx]\n",
@@ -2249,7 +2258,7 @@
         "    return path, tstep\n",
         "    \n"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2266,7 +2275,7 @@
         "path, start = get_random_start_point(potential_start_points)\n",
         "env.p.restoreState(fileName=path)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2305,7 +2314,7 @@
         "        plt.show()\n",
         "        #time.sleep(0.01)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2338,7 +2347,16 @@
         "vid_path = 'output/videos/trajectory.mp4'\n",
         "\n",
         "eval_seq_len = WINDOW_SIZE\n",
-        "o = observations[start][tf.newaxis,tf.newaxis,:]\n",
+        "state = env.panda.calc_state()\n",
+        "if JOINTS:\n",
+        "    o = tf.expand_dims(tf.expand_dims(np.concatenate([state['observation'], state['joints'][:7]]),0),0)\n",
+        "else:\n",
+        "    o = tf.expand_dims(tf.expand_dims(state['observation'],0),0)\n",
+        "    \n",
+        "if VELOCITY:\n",
+        "    o = tf.concat([o,tf.expand_dims(tf.expand_dims(tf.cast(state['velocity'],tf.float32),0),0)], axis = -1)\n",
+        "\n",
+        "\n",
         "goal = achieved_goals[start+eval_seq_len][tf.newaxis,tf.newaxis,:] # same as two expand_dims\n",
         "a_true = actions[start:start+WINDOW_SIZE]\n",
         "a_pred = []\n",
@@ -2374,16 +2392,19 @@
         "                  a_pred.append(a)\n",
         "          \n",
         "          o, r, d, _ = env.step(a)\n",
-        "          writer.append_data(o['img'])\n",
-        "          clear_output(wait=True)\n",
-        "          fig = plt.imshow(o['img'])\n",
-        "          plt.show()\n",
+        "          vel= tf.expand_dims(tf.expand_dims(tf.cast(o['velocity'],tf.float32),0),0)\n",
         "          if JOINTS:\n",
         "              o = tf.expand_dims(tf.expand_dims(np.concatenate([o['observation'],o['joints'][:7]]), 0),0)\n",
         "          else:\n",
-        "              o = tf.expand_dims(tf.expand_dims(o['observation'], 0),0)"
+        "              o = tf.expand_dims(tf.expand_dims(o['observation'], 0),0)\n",
+        "          if VELOCITY:\n",
+        "              o = tf.concat([o,vel], axis = -1)\n",
+        "          writer.append_data(o['img'])\n",
+        "          clear_output(wait=True)\n",
+        "          fig = plt.imshow(o['img'])\n",
+        "          plt.show()"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
